--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,27 +1,24 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700&family=Roboto:wght@100&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+:root {
+  /* --background: #ffffff;
+  --foreground: #171717; */
 }
+ 
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: "Titillium Web", serif;
 }
 
-body {
-  color: var(--foreground);
+body { 
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Titillium Web", serif !important;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; 
+  overflow: hidden;
 }
 
 * {
@@ -29,14 +26,4 @@ body {
   padding: 0;
   margin: 0;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
+ 
