--- a/src/features/About/About.module.css
+++ b/src/features/About/About.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 368px;
     border-radius: 20px;
-    object-fit: cover;
+    object-fit: contain;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
