--- a/src/features/EventInfo/EventInfo.module.css
+++ b/src/features/EventInfo/EventInfo.module.css
@@ -18,7 +18,7 @@
     width: 100%;
     height: 358px;
   }
-  
+
 }
 
 .roundedImg {
@@ -100,10 +100,15 @@
 
   @media (max-width:450px) {
     width: 100%;
-  }
+    border-radius: 0 !important;
+    -webkit-border-radius: 0 !important;
+    -moz-border-radius: 0 !important;
+    -ms-border-radius: 0 !important;
+    -o-border-radius: 0 !important;
+}
 }
 
-.rightBottomSharpBorder{
+.rightBottomSharpBorder {
   border-radius: 30px 30px 0px 30px;
   -webkit-border-radius: 30px 30px 0px 30px;
   -moz-border-radius: 30px 30px 0px 30px;
@@ -111,7 +116,7 @@
   -o-border-radius: 30px 30px 0px 30px;
 }
 
-.rightTopSharpBorder{
+.rightTopSharpBorder {
   border-radius: 30px 0px 30px 30px;
   -webkit-border-radius: 30px 0px 30px 30px;
   -moz-border-radius: 30px 0px 30px 30px;
@@ -123,6 +128,17 @@
   writing-mode: vertical-lr;
   transform: rotate(180deg);
   -o-transform: rotate(180deg);
+
+  @media (max-width:640px) {
+    transform: none;
+    -webkit-transform: none;
+    -moz-transform: none;
+    -ms-transform: none;
+    -o-transform: none;
+    writing-mode: initial;
+    -webkit-writing-mode: initial;
+    -ms-writing-mode: initial;
+}
 }
 
 .positionCard {
@@ -130,7 +146,17 @@
   top: 50%;
   transform: translateY(-50%);
   left: 125px;
+
   @media (max-width:640px) {
-    left: 10px;
+    left: 20px;
+    flex-direction: column;
+    align-items: start !important;
+  }
+}
+
+
+.rightSec{
+  @media (max-width:640px) {
+    padding: 25px 18px;
   }
 }
