--- a/src/features/About/About.module.css
+++ b/src/features/About/About.module.css
@@ -1,6 +1,6 @@
 .imgStyle{
     width: 100%;
-    height: 368px;
+    height: 368px; 
     border-radius: 20px;
     object-fit: contain;
     -webkit-border-radius: 20px;
@@ -9,7 +9,15 @@
     -o-border-radius: 20px;
 
     @media (max-width:450px) {
-        height: 188px !important;
+        height: auto !important;
+        border-radius: 10px !important;
+        -webkit-border-radius: 10px !important;
+        -moz-border-radius: 10px !important;
+        -ms-border-radius: 10px !important;
+        -o-border-radius: 10px !important;
+}
+    @media (max-width:1174px) {
+        height: auto !important;
     }
 }
 
