--- a/src/features/Banner/Banner.module.css
+++ b/src/features/Banner/Banner.module.css
@@ -175,6 +175,7 @@
     @media (max-width:640px) { 
         margin-top: 35px !important;
     }
+    margin-left: auto !important;
 }
 
 .estimateContainer{
