--- a/src/features/TicketInfo/TicketInfo.module.css
+++ b/src/features/TicketInfo/TicketInfo.module.css
@@ -206,3 +206,60 @@
   border-radius: 0 0 22px 22px;
   cursor: pointer;
 }
+
+
+.modalContent{
+  padding: 0px !important;
+  overflow: visible;
+  margin: 0;
+  border-radius: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+}
+
+.countryBtnClass{
+
+}
+.modalRoot{
+  padding: 0 !important;
+}
+
+.modalBody{
+  padding: 0 !important;
+}
+
+.modalPositionBefore::before{
+  position: absolute;
+  content: "";
+  height: 4px;
+  width: 100%;
+  background-color: #1BA0D9;
+  top: 0;
+  left: 0;
+}
+
+
+.inputClass{
+  padding: 20px;
+  padding-left: 15px;
+}
+
+.phoneInputClass{
+  width: 100% !important;  
+  padding: 20px;
+  padding-left: 15px;
+}
+
+
+.dropdownClass{
+  z-index: 1000;
+}
+
+.ticketPrice{
+  @media (max-width:640px) {
+    align-items: start !important;
+  }
+  align-items: end;
+}
