--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -21,6 +21,9 @@
     @mixin hover {
         background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
     }
+    @media (max-width:640px) {
+        margin-top: 6px;
+    }
 }
 
 .link p{
