--- a/src/features/Banner/Banner.module.css
+++ b/src/features/Banner/Banner.module.css
@@ -14,11 +14,19 @@
         margin-bottom: 270px !important;
     }
     @media (max-width:498px) {
-        margin-bottom: 222px  !important;
+        margin-bottom: 180px  !important;
     }
     @media (max-width:640px) and (min-width:450px) {
         margin-bottom: 165px  !important;
         
+    }
+
+    @media (min-height:660px) and (max-height:860px)  {
+        margin-bottom: 113px;
+    }
+
+    @media (min-height:860px) {
+        margin-bottom: 43px  !important;
     }
 }
 
@@ -183,6 +191,6 @@
 
 .estimateContainer{
     @media (max-width:640px) { 
-
+        height: 120px !important;
     }
 }
