--- a/src/features/TicketInfo/TicketInfo.module.css
+++ b/src/features/TicketInfo/TicketInfo.module.css
@@ -220,7 +220,8 @@
 }
 
 .countryBtnClass{
-
+  border: 1px solid #1BA0D9 !important;
+  border-right: none !important;
 }
 .modalRoot{
   padding: 0 !important;
@@ -244,12 +245,16 @@
 .inputClass{
   padding: 20px;
   padding-left: 15px;
+  border: 1px solid #1BA0D9;
+  color: black;
 }
 
 .phoneInputClass{
   width: 100% !important;  
   padding: 20px;
-  padding-left: 15px;
+  padding-left: 15px;  
+  border: 1px solid #1BA0D9 !important;
+  color: black !important;
 }
 
 
@@ -262,4 +267,12 @@
     align-items: start !important;
   }
   align-items: end;
+}
+
+.phoneContainerClass{ 
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
 }
