--- a/src/features/Banner/Banner.module.css
+++ b/src/features/Banner/Banner.module.css
@@ -6,7 +6,7 @@
     background-repeat: no-repeat;
     position: relative;
     padding-bottom: 49rem !important;
-    margin-bottom: 8rem;
+    margin-bottom: 9rem !important;
     @media (max-width:1011px) {
         margin-bottom: 31vw !important;
     }
@@ -14,7 +14,7 @@
         margin-bottom: 270px !important;
     }
     @media (max-width:498px) {
-        margin-bottom: 180px  !important;
+        margin-bottom: 210px  !important;
     }
     @media (max-width:640px) and (min-width:450px) {
         margin-bottom: 165px  !important;
@@ -26,7 +26,7 @@
     }
 
     @media (min-height:860px) {
-        margin-bottom: 43px  !important;
+        margin-bottom: 83px  !important;
     }
 }
 
@@ -48,8 +48,8 @@
 }
 
 
-.outlinedText {
-    font-size: 75px;
+.outlinedText { 
+    font-size: 50px;
     /* Adjust as needed */
     font-weight: bold;
     color: transparent;
@@ -59,13 +59,15 @@
 
     /* Converts text to uppercase */
     @media (max-width:1200px) {
-        font-size: clamp(2rem, 10vw, 5rem);
+        /* font-size: clamp(2rem, 10vw, 5rem); */
+        font-size: clamp(1.5rem, 4vw, 5rem);
+        margin-bottom: 15px;
     }
 }
 
 .mainText {
     @media (max-width:1200px) {
-        line-height: clamp(0.4rem, 10vw, 1.4rem) !important;
+        line-height: clamp(0.4rem, 10vw, 1.5rem) !important;
         font-size: clamp(0.4rem, 10vw, 1rem) !important;
     }
 }
@@ -193,4 +195,13 @@
     @media (max-width:640px) { 
         height: 120px !important;
     }
+}
+
+
+.btnClass{
+    background: #FFFFFF12 !important;
+    backdrop-filter: blur(11px);
+
+    border: 1px solid rgba(255, 255, 255, 0.26) !important;
+
 }
