--- a/src/features/TicketInfo/TicketInfo.module.css
+++ b/src/features/TicketInfo/TicketInfo.module.css
@@ -155,6 +155,7 @@
 .cardImage {
   width: 100%;
   height: auto;
+  margin-top: -4px;
 }
 
 .content {
@@ -202,7 +203,7 @@
   color: #fff;
   font-weight: bold;
   text-transform: uppercase;
-  padding: 10px 0;
+  padding: 11px 0;
   border-radius: 0 0 22px 22px;
   cursor: pointer;
 }
