--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,5 +27,52 @@ body {
  
 
 .pointer{
+  cursor: pointer !important;
+}
+
+.whatsappContainer {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  background-color: #1BA0D9;
+  padding: 15px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   cursor: pointer;
+  @media (max-width:640px) {
+    right: 25px;
+    bottom: 25px;
+  }
+}
+
+.wave {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  cursor: pointer !important;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: rgba(27, 160, 217, 0.3);
+  transform: translate(-50%, -50%) scale(2);
+  animation: wave 1.5s infinite ease-out;
+  -webkit-transform: translate(-50%, -50%) scale(2);
+  -moz-transform: translate(-50%, -50%) scale(2);
+  -ms-transform: translate(-50%, -50%) scale(2);
+  -o-transform: translate(-50%, -50%) scale(2);
+}
+ 
+
+@keyframes wave {
+  0% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 0.9;
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(2.5);
+    opacity: 0;
+  }
 }
