--- a/src/features/Sales/Sales.module.css
+++ b/src/features/Sales/Sales.module.css
@@ -1,11 +1,21 @@
 .raduisImg {
     width: 100%;
     border-radius: 20px;
+    height: 90vh;
     object-fit: cover;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
+    @media (max-width:640px) {
+    border-radius: 10px;
+    height: 40vh;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    margin-top: -12px;
+}
 }
 
 .textgradiant {
