Gallery background change

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -78,3 +78,28 @@ body {
     opacity: 0;
   }
 }
+
+
+.grid-gallery-item_thumbnail{
+  border-radius: 10px !important;
+  -webkit-border-radius: 10px !important;
+  -moz-border-radius: 10px !important;
+  -ms-border-radius: 10px !important;
+  -o-border-radius: 10px !important;
+}
+
+.ReactGridGallery_tile{
+  border-radius: 10px !important;
+  -webkit-border-radius: 10px !important;
+  -moz-border-radius: 10px !important;
+  -ms-border-radius: 10px !important;
+  -o-border-radius: 10px !important;
+}
+
+.ReactGridGallery_tile-viewport{
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
